from sqlalchemy import Boolean, Column, Float, ForeignKey, Integer, String, Text, UniqueConstraint
from sqlalchemy.orm import relationship

from database.database import Base


class User(Base):
    __tablename__ = "users"

    id = Column(String, primary_key=True)
    name = Column(String, nullable=False)
    email = Column(String, unique=True, nullable=False, index=True)
    password_hash = Column(String, nullable=False)
    role = Column(String, nullable=False)  # manager | employee
    avatar = Column(String, nullable=False, default="")
    job_title = Column(String, nullable=False, default="")
    # Total months of experience at the time of signup; combined with joined_at to compute current experience
    experience_months = Column(Integer, nullable=False, default=0)
    joined_at = Column(String, nullable=False, default="")  # ISO datetime of account creation
    # Admin can deactivate accounts: deactivated users keep their data but cannot log in.
    is_active = Column(Boolean, nullable=False, default=True)
    # Optional line manager for timesheet approval routing.
    manager_id = Column(String, ForeignKey("users.id", ondelete="SET NULL"), nullable=True, index=True)


class AppSetting(Base):
    """Tiny key/value store for app-level config (e.g. admin password override)."""

    __tablename__ = "app_settings"

    key = Column(String, primary_key=True)
    value = Column(Text, nullable=False, default="")


class Project(Base):
    __tablename__ = "projects"

    id = Column(String, primary_key=True)
    name = Column(String, nullable=False)
    description = Column(String, nullable=False, default="")
    client_id = Column(String, ForeignKey("clients.id", ondelete="RESTRICT"), nullable=True)
    created_by = Column(String, ForeignKey("users.id"), nullable=False)
    created_at = Column(String, nullable=False)
    # Optional background image (URL or data URL) + accent hex derived from it.
    background_image = Column(Text, nullable=False, default="")
    accent_color = Column(String, nullable=False, default="")
    # Optional project image/photo (replaces the folder icon).
    project_image = Column(Text, nullable=False, default="")

    client = relationship("Client", back_populates="projects")
    sections = relationship("Section", back_populates="project", cascade="all, delete-orphan")
    members = relationship("ProjectMember", back_populates="project", cascade="all, delete-orphan")


class Client(Base):
    __tablename__ = "clients"

    id = Column(String, primary_key=True)
    name = Column(String, nullable=False)
    created_at = Column(String, nullable=False)

    projects = relationship("Project", back_populates="client")


class Skill(Base):
    __tablename__ = "skills"

    id = Column(String, primary_key=True)
    name = Column(String, nullable=False)
    created_at = Column(String, nullable=False)


class UserSkill(Base):
    __tablename__ = "user_skills"

    user_id = Column(String, ForeignKey("users.id", ondelete="CASCADE"), primary_key=True)
    skill_id = Column(String, ForeignKey("skills.id", ondelete="CASCADE"), primary_key=True)


class ProjectMember(Base):
    __tablename__ = "project_members"

    project_id = Column(String, ForeignKey("projects.id"), primary_key=True)
    user_id = Column(String, ForeignKey("users.id"), primary_key=True)

    project = relationship("Project", back_populates="members")


class Section(Base):
    __tablename__ = "sections"

    id = Column(String, primary_key=True)
    name = Column(String, nullable=False)
    project_id = Column(String, ForeignKey("projects.id"), nullable=False)

    project = relationship("Project", back_populates="sections")


class Task(Base):
    __tablename__ = "tasks"

    id = Column(String, primary_key=True)
    title = Column(String, nullable=False)
    description = Column(String, nullable=False, default="")
    project_id = Column(String, ForeignKey("projects.id"), nullable=False)
    section_id = Column(String, ForeignKey("sections.id"), nullable=False)
    assigned_to = Column(String, ForeignKey("users.id"), nullable=False)
    assigned_by = Column(String, ForeignKey("users.id"), nullable=False)
    created_by = Column(String, ForeignKey("users.id"), nullable=False)
    due_date = Column(String, nullable=False)
    priority = Column(String, nullable=False)
    status = Column(String, nullable=False)
    is_started = Column(Boolean, nullable=False, default=False)
    started_at = Column(String, nullable=True)
    completed_at = Column(String, nullable=True)
    approved_by_manager = Column(Boolean, nullable=False, default=False)
    time_tracked = Column(Integer, nullable=False, default=0)
    min_log_minutes = Column(Integer, nullable=False, default=1)
    tags_json = Column(Text, nullable=False, default="[]")
    custom_fields_json = Column(Text, nullable=False, default="{}")
    created_at = Column(String, nullable=False)

    assignees = relationship("TaskAssignee", back_populates="task", cascade="all, delete-orphan")


class TaskAssignee(Base):
    __tablename__ = "task_assignees"

    task_id = Column(String, ForeignKey("tasks.id", ondelete="CASCADE"), primary_key=True, nullable=False)
    user_id = Column(String, ForeignKey("users.id", ondelete="CASCADE"), primary_key=True, nullable=False)
    position = Column(Integer, nullable=False, default=0)

    task = relationship("Task", back_populates="assignees")


class TaskTimerRun(Base):
    """A live, server-tracked work timer: one running session per (user, task).
    Persisted so a running timer survives reloads and is consistent across devices.
    On stop, elapsed time is computed server-side from started_at and the row removed."""

    __tablename__ = "task_timer_runs"

    user_id = Column(String, ForeignKey("users.id", ondelete="CASCADE"), primary_key=True, nullable=False)
    task_id = Column(String, ForeignKey("tasks.id", ondelete="CASCADE"), primary_key=True, nullable=False)
    started_at = Column(String, nullable=False)  # ISO-8601 UTC timestamp


class TaskTimeLog(Base):
    __tablename__ = "task_time_logs"

    id = Column(Integer, primary_key=True, autoincrement=True)
    task_id = Column(String, ForeignKey("tasks.id", ondelete="CASCADE"), nullable=False)
    user_id = Column(String, ForeignKey("users.id"), nullable=False)
    log_date = Column(String, nullable=False)
    seconds = Column(Integer, nullable=False, default=0)

    __table_args__ = (UniqueConstraint("task_id", "log_date", "user_id", name="uq_task_time_user_date"),)


class KanbanColumn(Base):
    __tablename__ = "kanban_columns"

    id = Column(String, primary_key=True)
    label = Column(String, nullable=False)
    position = Column(Integer, nullable=False, default=0)


class TimesheetSubmission(Base):
    """Weekly timesheet approval state — one row per (user, week). Absence = draft."""

    __tablename__ = "timesheet_submissions"

    id = Column(String, primary_key=True)
    user_id = Column(String, ForeignKey("users.id", ondelete="CASCADE"), nullable=False, index=True)
    week_start = Column(String, nullable=False, index=True)  # Monday YYYY-MM-DD
    status = Column(String, nullable=False)  # submitted | approved | rejected
    submitted_at = Column(String, nullable=False)
    reviewer_id = Column(String, ForeignKey("users.id", ondelete="SET NULL"), nullable=True, index=True)
    reviewed_at = Column(String, nullable=True)
    rejection_note = Column(Text, nullable=False, default="")
    # JSON array of ISO work dates (YYYY-MM-DD) included in this submission batch.
    submitted_dates = Column(Text, nullable=False, default="[]")

    __table_args__ = (UniqueConstraint("user_id", "week_start", name="uq_timesheet_submission_user_week"),)


class TimesheetEntry(Base):
    """Manual per-day work rows: project, section, description, time range (user-owned)."""

    __tablename__ = "timesheet_entries"

    id = Column(String, primary_key=True)
    user_id = Column(String, ForeignKey("users.id"), nullable=False, index=True)
    work_date = Column(String, nullable=False, index=True)
    project_id = Column(String, ForeignKey("projects.id"), nullable=False)
    section_id = Column(String, ForeignKey("sections.id"), nullable=False)
    description = Column(Text, nullable=False, default="")
    time_from = Column(String, nullable=False)
    time_to = Column(String, nullable=False)
    seconds = Column(Integer, nullable=False)
    # Whether this logged time is billable to the client. Defaults to billable.
    billable = Column(Boolean, nullable=False, default=True)
    created_at = Column(String, nullable=False)


class TaskFeedback(Base):
    __tablename__ = "task_feedback"

    id = Column(String, primary_key=True)
    task_id = Column(String, ForeignKey("tasks.id", ondelete="CASCADE"), nullable=False, index=True)
    user_id = Column(String, ForeignKey("users.id"), nullable=False)
    message = Column(Text, nullable=False)
    created_at = Column(String, nullable=False)
    updated_at = Column(String, nullable=False)


class TaskChecklist(Base):
    __tablename__ = "task_checklists"

    id = Column(String, primary_key=True)
    task_id = Column(String, ForeignKey("tasks.id", ondelete="CASCADE"), nullable=False, index=True)
    title = Column(String, nullable=False)
    priority = Column(String, nullable=False, default="Medium")
    is_done = Column(Boolean, nullable=False, default=False)
    position = Column(Integer, nullable=False, default=0)
    created_by = Column(String, ForeignKey("users.id"), nullable=False)
    created_at = Column(String, nullable=False)


class TaskAttachment(Base):
    __tablename__ = "task_attachments"

    id = Column(String, primary_key=True)
    task_id = Column(String, ForeignKey("tasks.id", ondelete="CASCADE"), nullable=False, index=True)
    filename = Column(String, nullable=False)          # original user filename
    stored_name = Column(String, nullable=False)       # UUID-based filename on disk
    content_type = Column(String, nullable=False, default="application/octet-stream")
    size_bytes = Column(Integer, nullable=False, default=0)
    uploaded_by = Column(String, ForeignKey("users.id"), nullable=False)
    created_at = Column(String, nullable=False)


class AuditLog(Base):
    __tablename__ = "audit_logs"

    id = Column(Integer, primary_key=True, autoincrement=True)
    user_id = Column(String, ForeignKey("users.id"), nullable=False, index=True)
    action = Column(String, nullable=False)        # e.g. "task.created", "checklist.done"
    entity_type = Column(String, nullable=False)   # "task" | "project" | "checklist" | "attachment"
    entity_id = Column(String, nullable=False)
    entity_name = Column(String, nullable=False, default="")
    details = Column(Text, nullable=False, default="{}")   # JSON blob
    created_at = Column(String, nullable=False)


class Notification(Base):
    __tablename__ = "notifications"

    id = Column(Integer, primary_key=True, autoincrement=True)
    user_id = Column(String, ForeignKey("users.id"), nullable=False, index=True)
    # task_assigned | task_mentioned | task_status_changed | task_commented | task_approved
    type = Column(String, nullable=False)
    title = Column(String, nullable=False, default="")
    message = Column(String, nullable=False, default="")
    entity_type = Column(String, nullable=False, default="task")
    entity_id = Column(String, nullable=False, default="")
    is_read = Column(Boolean, nullable=False, default=False)
    triggered_by = Column(String, ForeignKey("users.id"), nullable=False)
    created_at = Column(String, nullable=False)


class OAuthClient(Base):
    """A dynamically-registered MCP OAuth client (persisted so it survives restarts)."""

    __tablename__ = "oauth_clients"

    client_id = Column(String, primary_key=True)
    data = Column(Text, nullable=False)  # JSON of OAuthClientInformationFull
    created_at = Column(String, nullable=False, default="")


class OAuthGrant(Base):
    """Short-lived OAuth artifacts: pending auth requests, auth codes, refresh tokens.
    One table keyed by value, distinguished by `kind`. Persisted so the flow survives
    server reloads/restarts and works across workers."""

    __tablename__ = "oauth_grants"

    key = Column(String, primary_key=True)      # request_id | code | refresh token
    kind = Column(String, nullable=False)       # 'pending' | 'code' | 'refresh'
    client_id = Column(String, nullable=False, default="")
    user_id = Column(String, nullable=False, default="")
    data = Column(Text, nullable=False, default="{}")  # JSON payload
    expires_at = Column(Float, nullable=True)


class PersonalAccessToken(Base):
    """Long-lived, revocable token for programmatic access (MCP server, scripts).
    Only the SHA-256 hash is stored; the raw token is shown once at creation."""

    __tablename__ = "personal_access_tokens"

    id = Column(String, primary_key=True)
    user_id = Column(String, ForeignKey("users.id", ondelete="CASCADE"), nullable=False, index=True)
    name = Column(String, nullable=False, default="MCP token")
    token_hash = Column(String, nullable=False, unique=True, index=True)
    prefix = Column(String, nullable=False, default="")  # first chars, for display only
    created_at = Column(String, nullable=False, default="")
    last_used_at = Column(String, nullable=True)
    revoked = Column(Boolean, nullable=False, default=False)


class Scrum(Base):
    """One scrum / meeting entry. A day can hold many of these (standup, sync, etc.).
    Stores raw pasted text + the AI-parsed per-person breakdown."""

    __tablename__ = "scrums"

    id = Column(String, primary_key=True)
    work_date = Column(String, nullable=False, index=True)  # YYYY-MM-DD (NOT unique — many per day)
    title = Column(String, nullable=False, default="Scrum")
    position = Column(Integer, nullable=False, default=0)
    raw_text = Column(Text, nullable=False, default="")
    parsed_json = Column(Text, nullable=False, default="")  # JSON: {members:[{name,items[]}], summary}
    parse_status = Column(String, nullable=False, default="empty")  # empty|ok|failed
    updated_by = Column(String, ForeignKey("users.id"), nullable=True)
    updated_at = Column(String, nullable=False, default="")
    created_at = Column(String, nullable=False, default="")


class TeamsTranscriptImport(Base):
    """Dedup ledger for Teams meeting transcripts pulled into MOM. Keyed by the
    Graph transcript id so a poll/sync never creates the same scrum twice."""

    __tablename__ = "teams_transcript_imports"

    transcript_id = Column(String, primary_key=True)
    meeting_id = Column(String, nullable=False, default="")
    scrum_id = Column(String, ForeignKey("scrums.id", ondelete="SET NULL"), nullable=True)
    imported_by = Column(String, ForeignKey("users.id"), nullable=True)
    imported_at = Column(String, nullable=False, default="")
