%% ZET TaskManager — Entity Relationship Diagram
%% Source: backend/database/models.py + init_db.py migration (task_skills)
%% Generated from codebase analysis

erDiagram
    users {
        string id PK
        string name
        string email UK
        string password_hash
        string role
        string avatar
        string job_title
        int experience_months
        string joined_at
        boolean is_active
        string manager_id FK
    }

    app_settings {
        string key PK
        text value
    }

    clients {
        string id PK
        string name
        string created_at
    }

    projects {
        string id PK
        string name
        string description
        string client_id FK
        string created_by FK
        string created_at
        text background_image
        string accent_color
        text project_image
    }

    skills {
        string id PK
        string name
        string created_at
    }

    user_skills {
        string user_id PK,FK
        string skill_id PK,FK
    }

    task_skills {
        string task_id PK,FK
        string skill_id PK,FK
    }

    project_members {
        string project_id PK,FK
        string user_id PK,FK
    }

    sections {
        string id PK
        string name
        string project_id FK
    }

    tasks {
        string id PK
        string title
        string description
        string project_id FK
        string section_id FK
        string assigned_to FK
        string assigned_by FK
        string created_by FK
        string due_date
        string priority
        string status
        boolean is_started
        string started_at
        string completed_at
        boolean approved_by_manager
        int time_tracked
        int min_log_minutes
        text tags_json
        text custom_fields_json
        string created_at
    }

    task_assignees {
        string task_id PK,FK
        string user_id PK,FK
        int position
    }

    task_timer_runs {
        string user_id PK,FK
        string task_id PK,FK
        string started_at
    }

    task_time_logs {
        int id PK
        string task_id FK
        string user_id FK
        string log_date
        int seconds
    }

    kanban_columns {
        string id PK
        string label
        int position
    }

    timesheet_submissions {
        string id PK
        string user_id FK
        string week_start
        string status
        string submitted_at
        string reviewer_id FK
        string reviewed_at
        text rejection_note
        text submitted_dates
    }

    timesheet_entries {
        string id PK
        string user_id FK
        string work_date
        string project_id FK
        string section_id FK
        text description
        string time_from
        string time_to
        int seconds
        boolean billable
        string created_at
    }

    task_feedback {
        string id PK
        string task_id FK
        string user_id FK
        text message
        string created_at
        string updated_at
    }

    task_checklists {
        string id PK
        string task_id FK
        string title
        string priority
        boolean is_done
        int position
        string created_by FK
        string created_at
    }

    task_attachments {
        string id PK
        string task_id FK
        string filename
        string stored_name
        string content_type
        int size_bytes
        string uploaded_by FK
        string created_at
    }

    audit_logs {
        int id PK
        string user_id FK
        string action
        string entity_type
        string entity_id
        string entity_name
        text details
        string created_at
    }

    notifications {
        int id PK
        string user_id FK
        string type
        string title
        string message
        string entity_type
        string entity_id
        boolean is_read
        string triggered_by FK
        string created_at
    }

    oauth_clients {
        string client_id PK
        text data
        string created_at
    }

    oauth_grants {
        string key PK
        string kind
        string client_id
        string user_id
        text data
        float expires_at
    }

    personal_access_tokens {
        string id PK
        string user_id FK
        string name
        string token_hash UK
        string prefix
        string created_at
        string last_used_at
        boolean revoked
    }

    scrums {
        string id PK
        string work_date
        string title
        int position
        text raw_text
        text parsed_json
        string parse_status
        string updated_by FK
        string updated_at
        string created_at
    }

    teams_transcript_imports {
        string transcript_id PK
        string meeting_id
        string scrum_id FK
        string imported_by FK
        string imported_at
    }

    %% ── Relationships ──────────────────────────────────────────

    users ||--o{ users : "manager_id"
    users ||--o{ projects : "created_by"
    users ||--o{ project_members : ""
    users ||--o{ tasks : "assigned_to"
    users ||--o{ tasks : "assigned_by"
    users ||--o{ tasks : "created_by"
    users ||--o{ task_assignees : ""
    users ||--o{ task_timer_runs : ""
    users ||--o{ task_time_logs : ""
    users ||--o{ timesheet_submissions : "user_id"
    users ||--o{ timesheet_submissions : "reviewer_id"
    users ||--o{ timesheet_entries : ""
    users ||--o{ task_feedback : ""
    users ||--o{ task_checklists : "created_by"
    users ||--o{ task_attachments : "uploaded_by"
    users ||--o{ audit_logs : ""
    users ||--o{ notifications : "user_id"
    users ||--o{ notifications : "triggered_by"
    users ||--o{ personal_access_tokens : ""
    users ||--o{ user_skills : ""
    users ||--o{ scrums : "updated_by"
    users ||--o{ teams_transcript_imports : "imported_by"

    clients ||--o{ projects : "client_id"

    projects ||--o{ project_members : ""
    projects ||--o{ sections : ""
    projects ||--o{ tasks : ""
    projects ||--o{ timesheet_entries : ""

    sections ||--o{ tasks : ""
    sections ||--o{ timesheet_entries : ""

    tasks ||--o{ task_assignees : ""
    tasks ||--o{ task_timer_runs : ""
    tasks ||--o{ task_time_logs : ""
    tasks ||--o{ task_feedback : ""
    tasks ||--o{ task_checklists : ""
    tasks ||--o{ task_attachments : ""
    tasks ||--o{ task_skills : ""

    skills ||--o{ user_skills : ""
    skills ||--o{ task_skills : ""

    scrums ||--o{ teams_transcript_imports : ""
